2015-08-02  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/log.c (log_write): Use g_build_filename and g_get_home_dir instead of
	gnome_util_prepend_user_home when build the log filename.

	* src/main.c (build_lock_fname): Use g_get_home_dir instead of g_get_env("HOME") to get the home
	directory.
	(resolve_old_path):  Use g_get_home_dir instead of g_get_env("HOME") to get the home
	directory.

	* src/journal.c (get_device_position_for_widget): Added, to replace usage ofgtk_widget_get_pointer
	in various functions.
	(hover_timer_func): replaced usage of gtk_widget_get_pointer by get_device_position_for_widget.
	(html_on_url_cb): replaced usage of gtk_widget_get_pointer by get_device_position_for_widget.
	(html_on_url_cb): removed call to deprecated gtk_container_resize_children

2015-08-01  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/journal.c (on_save_clicked_cb): removed use of deprecated GTK_STOCK_* constants.
	(hover_timer_func): removed usage of deprecated function gtk_widget_get_pointer.

	* src/export.c (export_file_picker): removed use of deprecaded GTK_STOCK_* constants.

	* src/idle-dialog.c (idle_dialog_new): removed use of the deprecate gdk_get_display function.

	* src/app.c (app_new): removed use of deprecated APIs (gtk_hseparator_new, gtk_vbox_new,
	                       gtk_hbox_new, and gtk_image_new_from_stock).


2015-07-30  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/*.c: removed references to <gnome.h>

	* src/main.c: replace usage of some gnome API by their Glib equivalent

	* src/toolbar.c: replaced GtkSignalFunc by GCallback

2011-10-31  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/journal.c: replaced GtkObject by GtkWidget in Gtk event
	callback declarations.
	(do_show_report): replaced GTK_SIGNAL_FUNC by G_CALLBACK in
	callback bindings
	(gtt_ghtml_resolve_path): use g_build_path and g_file_* instead of
	gnome_program_locate_file to test for the presence of report
	files.